<resources>
    <string name="app_name">ViriPlayer</string>
    <string name="first_tab_name">All</string>
    <string name="second_tab_name">History</string>
    <string name="notification_channel_name">Tag_playback</string>
    <string name="recently_played">Recently played</string>
    <string name="library_text_view">library</string>
    <string name="all_tags">All tags</string>
    <string name="apply">Apply</string>
    <string name="select_tags">Select tags</string>
    <string name="add_tag_title">Which sensation will be next?</string>
    <string name="create_tag_button">Create</string>
    <string name="create_tag">Add tag</string>
    <string name="edit_tag_title">Edit tag data</string>
    <string name="edit_tag_button">Edit</string>
    <string name="drag_and_drop_tags_visa_versa">Drag and drop tags visa versa</string>
    <string name="no_tags_attached">No tags attached</string>
    <string name="tags_do_not_exist">Tags are out</string>
    <string name="empty_string"> </string>
    <string name="restart_current_song">Restart current song</string>
    <string name="placeholder_song_title">Nothing is playing</string>
    <string name="placeholder_song_author">Unknown Artist</string>
    <string name="hint_search">Search</string>
    <string name="filter_by_tags_content_description">Filter by tags</string>
    <string name="recently_content_description">Recently</string>
    <string name="logo_content_description">Settings</string>
    <string name="song_id_not_valid">Song didn\'t selected</string>
    <string name="tag_s_filter">Tag\'s filter</string>
    <string name="accept_changes">Accept changes</string>
    <string name="share">Share</string>
    <string name="edit_tag_s">Edit tag\'s</string>
    <string name="edit_tag">Edit</string>
    <string name="trash">Trash</string>
    <string-array name="sort_options">
        <item>Newest</item>
        <item>Oldest</item>
        <item>A-to-Z</item>
        <item>Z-to-A</item>
    </string-array>
    <string name="sharedPrefName">TagPlayerSharedPreferences</string>
    <string name="song_delete_success">Song deleted successfully</string>
    <string name="song_delete_failed">Song couldn\'t be deleted</string>
    <string name="database_name">MediaDatabase.db</string>
    <string name="tag_s_name">Tag\'s name…</string>
    <string name="filters_header">Filters</string>
    <string name="remove_tag">Remove</string>
    <string name="clear_filters">Clear filters</string>
    <string name="song_s_context_menu">Song\'s context menu</string>

    <string name="song_id_error">Invalid song\'s id</string>
    <string name="list_is_empty">Empty</string>
    <string name="title_permission_dialog">Warning</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="ok">Ok</string>
    <string name="declined_notification">
        It seems you permanently declined notification permission.
        You can go to the app settings to grant it.
    </string>
    <string name="declined_storage">
        It seems you permanently declined storage permission.
        You can go to the app settings to grant it.
    </string>
    <!--Errors-->
    <string name="failed_fetch_filters">Unable to retrieve filters</string>
    <string name="failed_fetch_songs">Unable to retrieve songs</string>
    <string name="failed_fetch_tags">Unable to retrieve tags</string>
    <string name="failed_share">Unable to share</string>
    <string name="failed_delete">Unable to delete</string>
    <string name="failed_fetch_recently">Unable to retrieve recently songs</string>
    <string name="failed_search">Unable to search songs</string>
    <string name="failed_tag_details">Unable to get tag details</string>
    <string name="failed_add_tag">Unable to add tag</string>
    <string name="failed_remove_tag">Unable to remove tag</string>
    <string name="failed_clear_filter">Unable to clear filter</string>
    <string name="failed_save_filter">Unable to save filter</string>
    <string name="failed_fetch_all_tags">Unable to retrieve all tags</string>
    <string name="failed_fetch_owned_tags">Unable to retrieve owned tags</string>
    <string name="failed_add_tag_to_song">Unable to attach tag</string>
    <string name="failed_remove_tag_to_song">Unable to detach tag</string>
    <string name="retrieve_id_error">Unable to get information about tag</string>
    <string name="unknown_error">Unknown error</string>
    <string name="color_description">Color</string>
</resources>