<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BaseFragmentViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clearFiltersButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filters_header"
                android:textAppearance="@style/H1Text"/>
            <ImageButton
                android:id="@+id/tagFilterButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:contentDescription="@string/tag_s_filter"
                android:scaleType="centerInside"
                android:src="@drawable/ic_tags"
                android:background="@null"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tagsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TagsRecycler"
            tools:listitem="@layout/item_tag"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/clearFiltersButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/clear_filters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_eraser"
        android:background="@drawable/background_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>