<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/menuBlock"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_content_description"
            android:src="@drawable/logo"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            style="@style/SearchViewStyle"/>

        <ImageButton
            android:id="@+id/tagFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/filter_by_tags_content_description"
            android:minWidth="32dp"
            android:minHeight="32dp"
            android:maxWidth="48dp"
            android:maxHeight="48dp"
            android:src="@drawable/ic_tags"
            android:background="@null"/>

        <ImageButton
            android:id="@+id/recentlyButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/recently_content_description"
            android:minWidth="32dp"
            android:minHeight="32dp"
            android:maxWidth="48dp"
            android:maxHeight="48dp"
            android:src="@drawable/ic_recently"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuBlock"
        android:paddingHorizontal="16dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/libraryTextView"
            android:textAppearance="@style/H1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_text_view"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/dark_gray"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/libraryRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:scrollbars="vertical"
            style="@style/CustomScrollBar"
            tools:listitem="@layout/item_song"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>