<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/RootViewStyle"
    app:layoutDescription="@xml/fragment_home_scene">

        <LinearLayout
            android:id="@+id/menuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?android:attr/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_content_description"
                android:src="@drawable/logo" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                style="@style/SearchViewStyle" />

            <ImageButton
                android:id="@+id/tagFilterButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/filter_by_tags_content_description"
                android:scaleType="centerInside"
                android:src="@drawable/ic_tags"
                android:background="@null" />
        </LinearLayout>

    <TextView
        android:id="@+id/recentlyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recently_played"
        android:textAppearance="@style/H1Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recentlyRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recentlyTextView"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:minHeight="132dp"
        tools:listitem="@layout/item_song" />

    <LinearLayout
        android:id="@+id/libraryBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recentlyRecycler"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/libraryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/library_text_view"
            android:textAppearance="@style/H1Text"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/sortSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_weight="1"
            android:gravity="end"/>
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/libraryRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/libraryBlock"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_song" />

</androidx.constraintlayout.motion.widget.MotionLayout>
