<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/colorPrimary"
    style="@style/BaseFragmentViewStyle">

    <TextView
        android:id="@+id/songTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/H1Text"
        android:text="@string/drag_and_drop_tags_visa_versa"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.example.tagplayer.core.presentation.custom_views.AlphaTextView
        android:id="@+id/allPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/allRecycler"
        app:layout_constraintTop_toTopOf="@id/allRecycler"
        android:textAppearance="@style/H1Text"
        android:gravity="center"
        android:text="@string/tags_do_not_exist"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songTitleTextView"
        android:layout_marginTop="16dp"
        style="@style/TagsRecycler"
        tools:listitem="@layout/item_tag"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?attr/textThemeColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/allRecycler"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ownRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        style="@style/TagsRecycler"
        tools:listitem="@layout/item_tag"/>

    <com.example.tagplayer.core.presentation.custom_views.AlphaTextView
        android:id="@+id/ownPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/ownRecycler"
        android:textAppearance="@style/H1Text"
        android:gravity="center"
        android:text="@string/no_tags_attached"/>

</androidx.constraintlayout.widget.ConstraintLayout>