<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="450dp"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp">
        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            tools:text="@string/add_tag_title"
            android:textAppearance="@style/H1Text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tagNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginVertical="8dp"
            android:layout_gravity="center"
            android:inputType="textCapSentences"
            android:freezesText="true"
            android:hint="@string/tag_s_name"
            style="@style/EditTextStyle"/>

        <com.example.tagplayer.tag_details.presentation.radio_grid.RadioGridLayout
            android:id="@+id/colorGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="5"
            android:rowCount="4">

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_soft_blue"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_soft_green"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_mint"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_teal"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_light_yellow"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_pastel_purple"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_light_gray"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_sage_green"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_soft_teal"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_peach_pink"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_fresh_green"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_lime_yellow"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_warm_orange"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_peach"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_rose_red"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_soft_pink"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_mint_cream"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_aqua"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_grayish_purple"
                style="@style/PickedColor"/>

            <com.example.tagplayer.tag_details.presentation.radio_grid.PickerImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pickedColor="@color/picker_warm_beige"
                style="@style/PickedColor"/>

        </com.example.tagplayer.tag_details.presentation.radio_grid.RadioGridLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addTagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_gravity="end"
            android:layout_marginVertical="8dp"
            tools:text="@string/create_tag_button"
            android:freezesText="true"/>
    </LinearLayout>

</ScrollView>